backend error
PS D:\python_sql> & C:/Users/mahim/AppData/Local/Python/pythoncore-3.14-64/python.exe d:/python_sql/backend.py
  File "d:\python_sql\backend.py", line 35
    return jsonify({"status": "connected"})
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
PS D:\python_sql> 



C:/Users/mahim/AppData/Local/Python/pythoncore-3.14-64/python.exe -m pip install flask flask-cors pyserial



